--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,7 +29,7 @@ nav {
   justify-content: space-between;
   background-color: black;
   color: whitesmoke;
-  padding: 10px;
+  padding: 15px;
   width: 100%;
 }
 
@@ -42,10 +42,21 @@ nav ul {
   width: 100%;
 }
 
-nav ul li {
-  display: flex;
-  align-items: center;
-  padding: 10px;
+nav ul li a {
+  font-size: medium;
+  text-decoration: none;
+  color: whitesmoke;
+  padding: 10px 20px 10px 20px ;
+  border-radius: 5px;
+}
+
+nav ul li :hover {
+  transition: .5s;
+  background-color: rgb(0, 183, 228);
+  border: 3px solid gray;
+  color: black;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .heroText{
@@ -89,7 +100,34 @@ nav ul li {
 .detailView{
   border: 5px solid black;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.detailView img{
+  grid-column: 1/2;
+  grid-row: 1/4;
+  justify-self: center;
+  align-self: center;
+  max-width: 90%;
+  padding: 10px;
+  background-color: gray;
+}
+
+.detailView h2{
+  background-color: rgb(0, 183, 228);;
+  border: 2px solid gray;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  .detailView{
+    border: none;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+  .detailView img{
+    grid-column: auto;
+    grid-row: auto;
+  }
 }
 
 input:required:invalid, input:focus:invalid {
