--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -117,6 +117,16 @@ nav ul li :hover {
   border: 2px solid gray;
   border-radius: 5px;
 }
+#inv-display{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  margin: 100px;
+  
+}
+#inv-display img{
+  height: auto;
+}
 
 @media screen and (max-width: 600px) {
   .detailView{
@@ -127,6 +137,10 @@ nav ul li :hover {
   .detailView img{
     grid-column: auto;
     grid-row: auto;
+  }
+  #inv-display{
+    grid-template-columns: 1fr;
+    margin: 20px;
   }
 }
 
