--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -124,8 +124,20 @@ nav ul li :hover {
   margin: 100px;
   
 }
+#inv-display h2{
+  border: 3px solid gray;
+  border-radius: 5px;
+}
 #inv-display img{
   height: auto;
+}
+#inv-display a{
+  text-decoration: none;
+  color: black;
+}
+#inv-display h2:hover{
+  transition: .5s;
+  background-color: rgb(0, 183, 228);
 }
 
 @media screen and (max-width: 600px) {
@@ -142,6 +154,7 @@ nav ul li :hover {
     grid-template-columns: 1fr;
     margin: 20px;
   }
+  
 }
 
 input:required:invalid, input:focus:invalid {
