account / week 5 stuff

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -8,4 +8,8 @@
 
 <% messages() %>
 
-<%- grid %>
+
+<div>
+  <a href="/inv/add-inventory" class="button">Add New Vehicle</a>
+  <a href="/inv/add-classification" class="button">Add New Classification</a>
+</div>
