--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,7 +1,21 @@
-<form>
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
+<!-- Flash Message -->
+<div class="flash-message">
+  <%- messages() %>
+</div>
+
+
+<form id="loginForm" action="/account/login" method="post">
     <!-- login form fields here -->
     <%- messages() %>
-    <input type="text" name="email" placeholder="email" required>
-    <input type="password" name="password" placeholder="password" required>
+    <input type="text" name="account_email" placeholder="email" required>
+    <input type="password" name="account_password" placeholder="password" required>
     <button type="submit">Login</button>
 </form>
