--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,3 +4,4 @@ let year = d.getFullYear() %>
   <a href src="/errors/error">error site</href>
   <p class="copyright"><a href "fakelink" error link></a> & copy ; <%= year %>, CSE 340 App</p>
 </footer>
+<script src="/js/script.js"></script>
