--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -15,5 +15,10 @@
     <label for="accountPassword">Password:</label> 
     <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span> 
     <input type="password" name="account_password" id="accountPassword" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+    <label for="account_type">Account Type:</label>
+    <select name="account_type" id="account_type" required>
+      <option value="Client">Client</option>
+      <option value="Employee">Employee</option>
+    </select>
     <button type="submit">Register</button>
 </form>
